# MVS_Subdevelop

./: .gitignore  CMakeLists.txt  README.md
src/app/: main.cpp
src/core/: CMakeLists.txt
src/core/include/: MvCamera.h  MvFrame.h
src/core/src/: MvCamera.cpp  MvFrame.cpp
src/gui/: CMakeLists.txt
src/gui/include/: login.h  maininterface.h  registerdialog.h
src/gui/src/: login.cpp  maininterface.cpp  registerdialog.cpp
src/gui/ui/: maininterface.ui  registerdialog.ui
src/model/: CMakeLists.txt  database.db
src/model/include/: MvDefine.h
